--- a/package.json
+++ b/package.json
@@ -12,13 +12,18 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@capacitor-firebase/authentication": "^7.3.1",
+    "@capacitor/android": "^7.4.3",
     "@capacitor/app": "7.0.2",
     "@capacitor/core": "7.4.3",
     "@capacitor/haptics": "7.0.2",
     "@capacitor/keyboard": "7.0.2",
+    "@capacitor/share": "^7.0.2",
     "@capacitor/status-bar": "7.0.2",
     "@ionic/vue": "^8.0.0",
     "@ionic/vue-router": "^8.0.0",
+    "axios": "^1.11.0",
+    "firebase": "^12.2.1",
     "ionicons": "^7.0.0",
     "vue": "^3.3.0",
     "vue-router": "^4.2.0"
@@ -36,6 +41,7 @@
     "terser": "^5.4.0",
     "typescript": "~5.6.2",
     "vite": "~5.2.0",
+    "vite-plugin-pwa": "^1.0.3",
     "vitest": "^0.34.6",
     "vue-tsc": "^2.1.10"
   },
